[gd_scene load_steps=4 format=3 uid="uid://cushr7vcbodso"]

[ext_resource type="Script" path="res://Scenes/combo/combo.gd" id="1_nhv6v"]
[ext_resource type="Texture2D" uid="uid://baq4k2mwyr8iw" path="res://Assets/note_container/cooldown_background_temp.png" id="2_oewgu"]
[ext_resource type="Texture2D" uid="uid://c5g6rlnwub3q4" path="res://Assets/note_container/cooldown_loading_temp.png" id="3_nllrk"]

[node name="Combo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhv6v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 56
theme_override_constants/margin_top = 56
theme_override_constants/margin_right = 56
theme_override_constants/margin_bottom = 56

[node name="Cooldown" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 36

[node name="ComboCooldown" type="TextureProgressBar" parent="MarginContainer/Cooldown"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
value = 100.0
fill_mode = 4
texture_under = ExtResource("2_oewgu")
texture_progress = ExtResource("3_nllrk")

[node name="Internotes" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 60

[node name="Internote1" type="Control" parent="MarginContainer/Internotes"]
layout_mode = 2

[node name="Note1" type="Node2D" parent="MarginContainer/Internotes/Internote1"]

[node name="Internote2" type="Control" parent="MarginContainer/Internotes"]
layout_mode = 2

[node name="Note2" type="Node2D" parent="MarginContainer/Internotes/Internote2"]

[node name="Internote3" type="Control" parent="MarginContainer/Internotes"]
layout_mode = 2

[node name="Note3" type="Node2D" parent="MarginContainer/Internotes/Internote3"]

[connection signal="child_entered_tree" from="MarginContainer/Internotes/Internote1/Note1" to="." method="_on_note_1_child_entered_tree"]
[connection signal="child_exiting_tree" from="MarginContainer/Internotes/Internote1/Note1" to="." method="_on_note_1_child_exiting_tree"]
[connection signal="child_entered_tree" from="MarginContainer/Internotes/Internote2/Note2" to="." method="_on_note_2_child_entered_tree"]
[connection signal="child_exiting_tree" from="MarginContainer/Internotes/Internote2/Note2" to="." method="_on_note_2_child_exiting_tree"]
[connection signal="child_entered_tree" from="MarginContainer/Internotes/Internote3/Note3" to="." method="_on_note_3_child_entered_tree"]
[connection signal="child_exiting_tree" from="MarginContainer/Internotes/Internote3/Note3" to="." method="_on_note_3_child_exiting_tree"]
